[package]
name = "lasim"
authors = ["Connor Mahaffey"]
version = "0.1.2"
edition = "2021"
license = "MIT"
publish = false
build = "build.rs"

[dependencies]
slint = "~1.0.2"
lemmy_api_common = "=0.18.1-rc.9"
reqwest = { version = "~0.11.18", features = ["json"] }
futures = "~0.3"
tokio = { version = "~1", features = ["full"] }
serde = { version = "~1.0.164", features = ["derive"] }
serde_json = "~1.0.97"
url = "~2.4.0"

[build-dependencies]
slint-build = "~1.0.2"

